# flow-prompt

./: .env.example  .env_example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: code-style.yml  run-unit-tests.yaml
examples/: README.md  pyproject.toml
examples/evaluate_prompts_quality/: evaluate_prompt_quality.py  flow_prompt_service.py  prompt.py
examples/prompts/: image_flow_prompt.py  image_prompt.py
flow_prompt/: __init__.py  exceptions.py  responses.py  secrets.py  settings.py  utils.py
flow_prompt/ai_models/: __init__.py  ai_model.py  attempt_to_call.py  behaviour.py  constants.py  utils.py
flow_prompt/ai_models/claude/: claude_model.py  constants.py  responses.py
flow_prompt/ai_models/gemini/: constants.py  gemini_model.py  responses.py
flow_prompt/ai_models/openai/: azure_models.py  behaviours.py  exceptions.py  openai_models.py  responses.py  utils.py
flow_prompt/prompt/: base_prompt.py  chat.py  flow_prompt.py  pipe_prompt.py  user_prompt.py
flow_prompt/response_prasers/: response_parser.py
flow_prompt/services/: SaveWorker.py
flow_prompt/services/flow_prompt/: __init__.py
flow_prompt/services/openai/: keys.py  models.py  openai.py  utils.py
tests/: compatibility.ipynb  conftest.py  flow_prompt.py  test_integrational.py
tests/ai_models/: test_azure_flow_prompt.py  test_gemini.py  test_openai.py  test_openai_flow_prompt.py  test_utils.py
tests/compatability/: test_save_logs.py
tests/prompts/: test_chat.py  test_ci_cd.py  test_create_test.py  test_elytimesai.py  test_feedback_loop.py  test_files.py  test_ideal_answer.py  test_pipe_prompt.py  test_pricing.py  test_stream.py
tests/response_parsers/: test_response_parsers.py
