[tool.poetry]
name = "flow-prompt"
version = "0.1.14"
description = ""
authors = ["Flow-prompt Engineering Team <engineering@flow-prompt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tiktoken = ">=0.5.2"
openai = ">=1.9.0"

[tool.poetry.dev-dependencies]
poetry = "^1.7.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pre-commit = "^3.6.0"
autopep8 = "^2.0.4"
python-dotenv = "^1.0.1"
twine = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
