[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["Flow-prompt Engineering Team <engineering@flow-prompt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
flow-prompt = "^0.1.4"

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
